# trusted-firmware-m

./: .editorconfig  .gitattributes  .gitignore  .gitreview  .readthedocs.yaml  BuildMbedCrypto.cmake  BuildMbedtls.cmake  CMakeLists.txt  CommonConfig.cmake  ConfigCoreIPC.cmake  ConfigCoreIPCTfmLevel2.cmake  ConfigCoreTest.cmake  ConfigDefault.cmake  ConfigPsaApiTest.cmake  ConfigPsaApiTestIPC.cmake  ConfigPsaApiTestIPCTfmLevel2.cmake  ConfigRegression.cmake  ConfigRegressionIPC.cmake  ConfigRegressionIPCTfmLevel2.cmake  ConfigRegressionTfmLevel3.cmake  Kconfig  README.md  README.rst  contributing.md  contributing.rst  glossary.md  init-git.sh  maintainers.md  maintainers.rst  readme.md  readme.rst  toolchain_ARMCLANG.cmake  toolchain_GNUARM.cmake  toolchain_IARARM.cmake  toolchain_LLVM.cmake  version.cmake  west.yml
app/: CMakeLists.txt  main_ns.c  os_wrapper_cmsis_rtos.c  os_wrapper_cmsis_rtos_v2.c  os_wrapper_rtx.c  tfm_integ_test.c  tfm_integ_test.h
app/ext/: tz_context.c
bl1/bl1_1/shared_lib/: CMakeLists.txt
bl1/bl1_2/: CMakeLists.txt  bl1_dummy_rotpk_1.prv  bl1_dummy_rotpk_1.pub  main.c
bl1/bl1_2/default_config/: bl1_2_config.h
bl1/bl1_2/lib/: CMakeLists.txt  image.c
bl1/bl1_2/scripts/: create_bl2_img.py
bl2/: CMakeLists.txt
bl2/ext/mcuboot/: CMakeLists.txt  Kconfig  MCUBoot.cmake  MCUBootConfig.cmake  bl2_main.c  flash_map.c  flash_map_extended.c  flash_map_legacy.c  hal_flash.c  keys.c  mcuboot_default_config.cmake  os.c
bl2/include/: boot_record.h  tfm_boot_status.h
bl2/src/: boot_record.c  crt_exit.c  default_flash_map.c  flash_map.c  provisioning.c  psa_stub_rng.c  security_cnt.c  shared_data.c  shared_symbol_template.txt  thin_psa_crypto_core.c
lib/backtrace/: CMakeLists.txt
lib/backtrace/inc/: backtrace.h
lib/backtrace/src/: backtrace.c
lib/ext/cmsis/: 0001-iar-Add-missing-v8.1m-check.patch  CMakeLists.txt
lib/ext/cryptocell-312-runtime/: CMakeLists.txt  README.md
lib/ext/mcuboot/: 0001-bootutil-Fix-AES-and-SHA-256-contexts-not-zeroized-w.patch  0002-bootutil-Fix-device-brick-after-power-failure-during.patch  0003-boot-bootutil-loader-Fix-issue-with-stuck-revert.patch  0004-boot-bootutil-Refactor-erase-functionality-to-fix-wa.patch  0005-boot-bootutil-swap_scratch-Fix-issue-with-bricking-d.patch  0006-boot-bootutil-declare-fih_panic_loop-as-noreturn.patch  CMakeLists.txt
lib/ext/qcbor/: 0001-Disable-gcc-Wmaybe-uninitialized-because-of-false-po.patch  0002-Add-missing-type-casts.patch  CMakeLists.txt
lib/ext/t_cose/: 0001-Add-t_cose_key_encode-API.patch  0002-Add-t_cose_key_decode-API.patch  0003-Import-EC-keys-with-ECDSA-xxx-algo-rather-than-ECDH.patch  CMakeLists.txt  (+5 more)
lib/t_cose/: CMakeLists.txt
lib/tfm_log/: CMakeLists.txt
lib/tfm_log_unpriv/: CMakeLists.txt
lib/tfm_vprintf/: CMakeLists.txt
secure_fw/: CMakeLists.txt
secure_fw/core/: CMakeLists.inc  secure_utilities.h  tfm_boot_data.c  tfm_core.c  tfm_core_mem_check.c  tfm_core_svcalls_func.c  tfm_core_svcalls_ipc.c  tfm_core_utils.c  tfm_func_api.c  tfm_handler.c  tfm_internal.h  tfm_irq_list.h  tfm_irq_signal_defs.h  tfm_nspm.c  tfm_nspm_func.c  tfm_nspm_ipc.c  tfm_platform_api.h  tfm_psa_api_client.c  tfm_queue.h  tfm_secure_api.c  tfm_secure_api.h  tfm_secure_irq_handlers.inc  tfm_secure_irq_handlers.inc.template  tfm_spm_services.c  tfm_svc.h  tfm_thread.c  tfm_unpriv_api.c  tfm_utils.c
secure_fw/include/: async.h  build_config_check.h  config_tfm.h  security_defs.h
secure_fw/ns_callable/: CMakeLists.inc  tfm_audit_veneers.c  tfm_crypto_veneers.c  tfm_initial_attestation_veneers.c  tfm_log_veneers.c  tfm_platform_veneers.c  tfm_psa_api_veneers.c  tfm_sst_veneers.c  tfm_veneers.c  tfm_veneers.c.template
secure_fw/partitions/: CMakeLists.txt  Kconfig  manifestfilename.template  partition_load_info.template  partition_static_info.template  tfm_service_list.inc  tfm_service_list.inc.template
secure_fw/services/: manifestfilename.template  tfm_partition_defs.inc  tfm_partition_defs.inc.template  tfm_partition_list.inc  tfm_partition_list.inc.template  tfm_service_list.inc  tfm_service_list.inc.template  tfm_sfid_list.inc  tfm_sfid_list.inc.template  tfm_spm_db.inc  tfm_spm_db.inc.template
secure_fw/spm/: CMakeLists.inc  CMakeLists.txt  Kconfig  Kconfig.comp  mpu_armv8m_drv.c  mpu_armv8m_drv.h  service_defs.h  spm_api.c  spm_api.h  spm_api_func.c  spm_api_ipc.c  spm_db.h  spm_db_setup.h  spm_func.c  spm_ipc.c  spm_partition_defs.h  spm_psa_client_call.c  tfm_spm_db.inc  tfm_spm_db.inc.template  tfm_spm_db_func.inc  tfm_spm_db_ipc.inc  user_partition_defines.inc  user_service_defines.inc
test/: CMakeLists.inc  CMakeLists.txt  TestConfig.cmake
test/framework/: CMakeLists.inc  helpers.c  helpers.h  integ_test.h  integ_test_helper.c  integ_test_helper.h  non_secure_suites.c  secure_suites.c  test_framework.c  test_framework.h  test_framework_helpers.c  test_framework_helpers.h  test_framework_integ_test_helper.c
test/test_services/: CMakeLists.inc
tf-m-tests/app/: CMakeLists.txt  main_ns.c  tfm_log.h
tools/: CMakeLists.txt  config_impl.cmake.template  generate_from_template.py  keyword_substitution.py  keyword_substitution_test_vectors.yaml  keyword_substitution_tests.py  manifest_list.yaml  requirements.txt  requirements_docs.txt  tfm_generated_file_list.yaml  tfm_manifest_list.yaml  tfm_manifest_list.yaml.in  tfm_parse_manifest_list.py  tfm_psa_ff_test_manifest_list.yaml  tfm_psa_ff_test_manifest_list.yaml.in
tools/documentation/: tfm_cmake_defaults.py  tfm_copy_files.py
tools/iat-verifier/: README.rst  setup.py
tools/kconfig/: tfm_kconfig.py
tools/modules/: arg_utils.py  c_include.py  c_macro.py  c_struct.py  crypto_conversion_utils.py  encrypt_data.py  file_loader.py  key_derivation.py  sign_data.py  sign_then_encrypt_data.py  struct_pack.py
tools/templates/: manifestfilename.template  partition_intermedia.template  partition_load_info.template
tools/tf_fuzz/: Makefile  README  class_forwards.hpp  generate_test_suite.sh  tf_fuzz.cpp  tf_fuzz.hpp
trusted-firmware-m/bl2/: CMakeLists.txt
trusted-firmware-m/platform/: CMakeLists.txt
(+2343 files in other folders)
